--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <p> Want to work with me? Feel free to reach out!</p>
                     </div>
                     <div>
-                        <a href="mailto:#">Email Me</a>
+                        <a href="#" class="button contact">Email Me</a>
                     </div>
                     <div>
                         <!-- Social Media Placeholder-->
