"learn more" button fix & email link

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                         </p>
                     </div>
                     <div>
-                        <a href="mailto:#">Email Me</a>
+                        <a href="mailto:ajclaer@gmail.com">Email Me</a>
                     </div>
                     <div>
                        <!-- Social Media Placeholder-->
