--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <img src="img/discoverly/lg-png/high-fid-login-mobile-large.png" alt="Discoverly Login Page">
                         </picture>
                         <div></div>
-                        <a href="" class="learnmore">Learn more /a><!-- button label -->
+                        <a href="" class="learnmore">Learn more </a><!-- button label -->
                     </div><!-- end second column -->
                 </div><!-- end row that holds (2) columns for project -->
                 
