--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,13 @@
         <link href="./img/favicon_io/favicon-16x16.png" rel="shortcut icon">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!--Typography-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact Me!</title>
     </head>
@@ -35,7 +42,8 @@
                         <p> Want to work with me? Feel free to reach out!</p>
                     </div>
                     <div>
-                        <a href="mailto:#">Email Me</a>
+                        <a class="button" href="mailto:#">Email Me 
+                        </a>
                     </div>
                     <div>
                        <!-- Social Media Placeholder-->
