--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="./img/favicon_io/favicon-16x16.png" rel="shortcut icon">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +19,7 @@
     <body>
             <!-- Header Section -->
         <header>
-            <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo">
+            <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo" class="logo">
     <div>
             <div>
                 <nav>
