--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link href="./img/favicon_io/favicon-16x16.png" rel="shortcut icon">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -20,7 +21,7 @@
     <!-- Header Section -->
     <header>
         <div class="container">
-            <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo">
+            <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo" class="logo">
             <div>
                 <div>
                     <nav>
