--- a/discoverly.html
+++ b/discoverly.html
@@ -12,7 +12,7 @@
     <body>
             <!-- Header Section -->
         <header>
-            <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo">
+            <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo" class="logo">
     <div>
             <div>
                 <nav>
