Add CSS Styling to work section & Footer-contact section

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     </header>
     <main>
         <!-- Hero Section -->
-        <div id="hero" class="container">
+        <div id="hero">
             <h1> Hello! It's nice to meet you. I'm Alyssa Claerhout</h1>
-            <div>
+            <div class="container">
                 I'm a UX/UI designer on a mission to create a more intuitive and creative world.
             </div>
         </div>
