Trying to add CSS Styling to additional pages

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <title>Alyssa Claerhout Contact Me</title>
     </head>
     
-    <body>
+    <body id="about-body">
             <!-- Header Section -->
         <header>
             <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo" class="logo">
