--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>Alyssa Claerhout UX Designer</title>
 </head>
 
-<body id="homepage-body">
+<body id="home-body">
     <!-- Header Section -->
     <header>
         <div class="container">
@@ -59,7 +59,7 @@
                     <img src="img/discoverly/lg-png/high-fid-login-mobile-large.png" alt="Discoverly Login Page">
                 </picture>
                 <div></div>
-                <a href="" class="learnmore">Learn more </a><!-- button label -->
+                <a href="discoverly.html" class="learnmore">Learn more </a><!-- button label -->
             </div><!-- end second column -->
         </div><!-- end row that holds (2) columns for project -->
 
@@ -78,7 +78,7 @@
                 <img src="img/cook-app/large-png/lg-splashpage.png" alt="Pantry Chef Splash Page">
             </picture>
             <div></div>
-            <a href="" class="button">Learn more</a><!-- button label -->
+            <a href="pantrychef.html" class="button">Learn more</a><!-- button label -->
         </div><!-- end second column -->
 
         <!-- End Project 2 Section -->
