--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <title>Contact Me!</title>
     </head>
     
-    <body>
+    <body id="contact-body">
             <!-- Header Section -->
         <header>
             <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo" class="logo">
