Linked about & project pages with CSS Styling

--- a/discoverly.html
+++ b/discoverly.html
@@ -7,12 +7,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!--Typography-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+        rel="stylesheet">
     <title>Alyssa Claerhout UX Designer</title>
 </head>
 
 <body>
     <!-- Header Section -->
-    <header class="container">
+    <header>
         <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo" class="logo">
         <div>
             <div>
@@ -27,7 +36,7 @@
         </div>
     </header>
     <main>
-        <div>
+        <div class="container">
             <div>
                 <h1>Discoverly</h1>
                 <div class="container">
