--- a/about.html
+++ b/about.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="./img/favicon_io/favicon-16x16.png" rel="shortcut icon">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+
+<head>
+    <link href="./img/favicon_io/favicon-16x16.png" rel="shortcut icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <!--Typography-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,600;0,700;1,400&display=swap" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alyssa Claerhout Contact Me</title>
-    </head>
-    
-    <body id="about-body">
-            <!-- Header Section -->
-        <header>
-            <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo" class="logo">
-    <div>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alyssa Claerhout Contact Me</title>
+</head>
+
+<body id="about-body">
+    <!-- Header Section -->
+    <header>
+        <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo" class="logo">
+        <div>
             <div>
                 <nav>
                     <ul>
@@ -31,68 +34,85 @@
                 </nav>
             </div>
         </div>
-        </header>
-            <main>
+    </header>
+    <main>
+        <div>
+            <div>
+                <h1>About</h1>
+                <picture>
+                    <source srcset="img/profile-pics/alyssa-picture-small.png" media="(max-width:767px)">
+                    <img src="img/profile-pics/alyssa-profile-pic-large.png" alt="Alyssa Profile Picture">
+                </picture>
                 <div>
+                    <!-- Column 1 -->
                     <div>
-                        <h1>About</h1>
-                        <picture>
-                            <source srcset="img/profile-pics/alyssa-picture-small.png" media="(max-width:767px)">
-                            <img src="img/profile-pics/alyssa-profile-pic-large.png" alt="Alyssa Profile Picture">
-                          </picture>
-                        <div>
-                            <!-- Column 1 -->
-                            <div> 
-                                <h2>My Story</h2>
-                                <p></p>
-                                I'm a sociologist turned UX/UI designer located in the mountains of the American Southwest. My background in social & behavioral research provided me with the data-analysis and interpersonal skills I need to build beautiful data-driven designs. I am passionate about designing a better world and you'll find that accessibility and social justice are a key part of my designs.
-                                <p></p>
-                                    <a href="./files/claerhout-resume.pdf" download>Open My CV</a> 
-                            </div>
-                             <!-- Column 2 -->
-                            <div>
-                        </div>
-                                <h2>Skills & Tools</h2>
-                                <h3>Relevant Skills</h3>
-                                <ul>
-                                    <li>Communication</li>
-                                    <li>Teamwork</li>
-                                    <li>Problem Solving</li>
-                                    <li>Data Analysis</li>
-                                    <li>User Testing</li>
-                                </ul>
-                                <h3>Tools I Use</h3>
-                                    <ul>
-                                        <li>Figma</li>
-                                        <li>Miro</li>
-                                        <li>Sketch</li>
-                                        <li>Adobe CC</li>
-                                    </ul>
-                            </div>
+                        <h2>My Story</h2>
+                        <p></p>
+                        I'm a sociologist turned UX/UI designer located in the mountains of the American Southwest. My
+                        background in social & behavioral research provided me with the data-analysis and interpersonal
+                        skills I need to build beautiful data-driven designs. I am passionate about designing a better
+                        world and you'll find that accessibility and social justice are a key part of my designs.
+                        <p></p>
+                        <a href="./files/claerhout-resume.pdf" download>Open My CV</a>
                     </div>
-                </div> 
-            </main>
-            <!-- Footer Section-->
-                <footer>
-                    <div>  
-                        <h2>Get in Touch</h2>
-                        <p> Want to work with me? Feel free to reach out!
+                    <!-- Column 2 -->
+                    <div>
+                    </div>
+                    <h2>Skills & Tools</h2>
+                    <h3>Relevant Skills</h3>
+                    <ul>
+                        <li>Communication</li>
+                        <li>Teamwork</li>
+                        <li>Problem Solving</li>
+                        <li>Data Analysis</li>
+                        <li>User Testing</li>
+                    </ul>
+                    <h3>Tools I Use</h3>
+                    <ul>
+                        <li>Figma</li>
+                        <li>Miro</li>
+                        <li>Sketch</li>
+                        <li>Adobe CC</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
+    <!-- Footer Section-->
+    <footer>
+        <div>
+            <h2>Get in Touch</h2>
+            <p> Want to work with me? Feel free to reach out!
 
-                        </p>
-                    </div>
-                    <div>
-                        <a class="button" href="mailto:ajclaer@gmail.com">Email Me</a>
-                    </div>
-                    <div>
-                       <!-- Social Media Placeholder-->
-                       <a href="https://www.linkedin.com/in/alyssa-claerhout-173a7892/" class="button" target="#">
-                        <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><path d="M30.071,27.101v-0.077c-0.016,0.026-0.033,0.052-0.05,0.077H30.071z"/><path d="M49.265,4.667H7.145c-2.016,0-3.651,1.596-3.651,3.563v42.613c0,1.966,1.635,3.562,3.651,3.562h42.12   c2.019,0,3.654-1.597,3.654-3.562V8.23C52.919,6.262,51.283,4.667,49.265,4.667z M18.475,46.304h-7.465V23.845h7.465V46.304z    M14.743,20.777h-0.05c-2.504,0-4.124-1.725-4.124-3.88c0-2.203,1.67-3.88,4.223-3.88c2.554,0,4.125,1.677,4.175,3.88   C18.967,19.052,17.345,20.777,14.743,20.777z M45.394,46.304h-7.465V34.286c0-3.018-1.08-5.078-3.781-5.078   c-2.062,0-3.29,1.389-3.831,2.731c-0.197,0.479-0.245,1.149-0.245,1.821v12.543h-7.465c0,0,0.098-20.354,0-22.459h7.465v3.179   c0.992-1.53,2.766-3.709,6.729-3.709c4.911,0,8.594,3.211,8.594,10.11V46.304z"/></g></svg>
-                    </a>
-                    <a href="https://www.instagram.com/aclaer.art/" class="button" target="#">
-                        <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_2" version="1.1" viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M43.414,4.831H13c-5.283,0-9.581,4.297-9.581,9.58v10.12v20.295c0,5.283,4.298,9.58,9.581,9.58h30.415  c5.283,0,9.58-4.297,9.58-9.58V24.53v-10.12C52.994,9.127,48.697,4.831,43.414,4.831z M46.162,10.544l1.096-0.004v1.091v7.312  l-8.375,0.027l-0.029-8.402L46.162,10.544z M21.131,24.53c1.588-2.197,4.164-3.638,7.076-3.638s5.488,1.441,7.074,3.638  c1.033,1.434,1.652,3.188,1.652,5.088c0,4.811-3.918,8.725-8.727,8.725c-4.812,0-8.726-3.914-8.726-8.725  C19.481,27.718,20.098,25.964,21.131,24.53z M48.164,44.825c0,2.621-2.131,4.75-4.75,4.75H13c-2.62,0-4.751-2.129-4.751-4.75V24.53  h7.4c-0.639,1.572-0.998,3.289-0.998,5.088c0,7.473,6.08,13.557,13.556,13.557c7.475,0,13.555-6.084,13.555-13.557  c0-1.799-0.361-3.516-1-5.088h7.402V44.825z"/></svg>
-                    </a>
-                    <p>Copyright Alyssa-Claerhout 2023</p>
-                    </div>
-                </footer>
-    </body>
+            </p>
+        </div>
+        <div>
+            <a class="button" href="mailto:ajclaer@gmail.com">Email Me</a>
+        </div>
+        <div>
+            <!-- Social Media Placeholder-->
+            <a href="https://www.linkedin.com/in/alyssa-claerhout-173a7892/" class="button" target="#">
+                <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1"
+                    viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <g>
+                        <path d="M30.071,27.101v-0.077c-0.016,0.026-0.033,0.052-0.05,0.077H30.071z" />
+                        <path
+                            d="M49.265,4.667H7.145c-2.016,0-3.651,1.596-3.651,3.563v42.613c0,1.966,1.635,3.562,3.651,3.562h42.12   c2.019,0,3.654-1.597,3.654-3.562V8.23C52.919,6.262,51.283,4.667,49.265,4.667z M18.475,46.304h-7.465V23.845h7.465V46.304z    M14.743,20.777h-0.05c-2.504,0-4.124-1.725-4.124-3.88c0-2.203,1.67-3.88,4.223-3.88c2.554,0,4.125,1.677,4.175,3.88   C18.967,19.052,17.345,20.777,14.743,20.777z M45.394,46.304h-7.465V34.286c0-3.018-1.08-5.078-3.781-5.078   c-2.062,0-3.29,1.389-3.831,2.731c-0.197,0.479-0.245,1.149-0.245,1.821v12.543h-7.465c0,0,0.098-20.354,0-22.459h7.465v3.179   c0.992-1.53,2.766-3.709,6.729-3.709c4.911,0,8.594,3.211,8.594,10.11V46.304z" />
+                    </g>
+                </svg>
+            </a>
+            <a href="https://www.instagram.com/aclaer.art/" class="button" target="#">
+                <svg enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_2" version="1.1"
+                    viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <path
+                        d="M43.414,4.831H13c-5.283,0-9.581,4.297-9.581,9.58v10.12v20.295c0,5.283,4.298,9.58,9.581,9.58h30.415  c5.283,0,9.58-4.297,9.58-9.58V24.53v-10.12C52.994,9.127,48.697,4.831,43.414,4.831z M46.162,10.544l1.096-0.004v1.091v7.312  l-8.375,0.027l-0.029-8.402L46.162,10.544z M21.131,24.53c1.588-2.197,4.164-3.638,7.076-3.638s5.488,1.441,7.074,3.638  c1.033,1.434,1.652,3.188,1.652,5.088c0,4.811-3.918,8.725-8.727,8.725c-4.812,0-8.726-3.914-8.726-8.725  C19.481,27.718,20.098,25.964,21.131,24.53z M48.164,44.825c0,2.621-2.131,4.75-4.75,4.75H13c-2.62,0-4.751-2.129-4.751-4.75V24.53  h7.4c-0.639,1.572-0.998,3.289-0.998,5.088c0,7.473,6.08,13.557,13.556,13.557c7.475,0,13.555-6.084,13.555-13.557  c0-1.799-0.361-3.516-1-5.088h7.402V44.825z" />
+                </svg>
+            </a>
+            <p>Copyright Alyssa-Claerhout 2023</p>
+        </div>
+    </footer>
+</body>
+
 </html>
