change duplicate ID

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <!-- Project 1 Section -->
-        <div id="work"> <!-- open row that holds (2) columns for project -->
+        <div id="discwork"> <!-- open row that holds (2) columns for project -->
             <div class="container"><!-- open first column (used for image) -->
             </div><!-- end first column-->
             <div class="row"><!-- open second column (use for text) -->
@@ -64,7 +64,7 @@
         </div><!-- end row that holds (2) columns for project -->
 
         <!-- Project 2 Section -->
-        <div id="work"><!-- open first column (used for image) -->
+        <div id="pcwork"><!-- open first column (used for image) -->
         </div><!-- end first column-->
         <div class="container"><!-- open second column (use for text) -->
             <h2>Pantry Chef</h2><!-- heading for the project-->
