--- a/index.html
+++ b/index.html
@@ -47,35 +47,37 @@
         <!-- Project 1 Section -->
         <div id="discwork"> <!-- open row that holds (2) columns for project -->
             <div class="container"><!-- open first column (used for image) -->
-            <div class="row"><!-- open second column (use for text) -->
-                <h2>Discoverly</h2><!-- heading for the project-->
+                <div class="row"><!-- open second column (use for text) -->
+                    <h2>Discoverly</h2><!-- heading for the project-->
+                    <p><!-- open paragraph -->
+                        UX/UI Research and Design: Legitimate in the age of Instant Information.
+                        Discoverly was created to connect people with experts from many fields
+                    </p><!-- end paragraph -->
+                    <picture>
+                        <source srcset="img/discoverly/sm-png/high-fid-login-mobile-small.png"
+                            media="(max-width:767px)">
+                        <img src="img/discoverly/lg-png/high-fid-login-mobile-large.png" alt="Discoverly Login Page">
+                    </picture>
+                    <div></div>
+                    <a href="discoverly.html" class="learnmore">Learn more </a><!-- button label -->
+                </div><!-- end second column -->
+
+                <h2>Pantry Chef</h2><!-- heading for the project-->
+                <div class="row">
+                </div>
                 <p><!-- open paragraph -->
-                    UX/UI Research and Design: Legitimate in the age of Instant Information.
-                    Discoverly was created to connect people with experts from many fields
+                    This app was created to save money and time for busy people wanting to make tasty, home-cooked
+                    meals.
                 </p><!-- end paragraph -->
                 <picture>
-                    <source srcset="img/discoverly/sm-png/high-fid-login-mobile-small.png" media="(max-width:767px)">
-                    <img src="img/discoverly/lg-png/high-fid-login-mobile-large.png" alt="Discoverly Login Page">
+                    <source srcset="img/cook-app/small-png/sm-splashpage.png" media="(max-width:767px)">
+                    <img src="img/cook-app/large-png/lg-splashpage.png" alt="Pantry Chef Splash Page">
                 </picture>
                 <div></div>
-                <a href="discoverly.html" class="learnmore">Learn more </a><!-- button label -->
+                <a href="pantrychef.html" class="button">Learn more</a><!-- button label -->
             </div><!-- end second column -->
-        
-            <h2>Pantry Chef</h2><!-- heading for the project-->
-            <div class="row">
-            </div>
-            <p><!-- open paragraph -->
-                This app was created to save money and time for busy people wanting to make tasty, home-cooked meals.
-            </p><!-- end paragraph -->
-            <picture>
-                <source srcset="img/cook-app/small-png/sm-splashpage.png" media="(max-width:767px)">
-                <img src="img/cook-app/large-png/lg-splashpage.png" alt="Pantry Chef Splash Page">
-            </picture>
-            <div></div>
-            <a href="pantrychef.html" class="button">Learn more</a><!-- button label -->
-        </div><!-- end second column -->
 
-        <!-- End Project 2 Section -->
+            <!-- End Project 2 Section -->
     </main>
     <!-- Footer Section-->
     <footer id="contact">
