fixed color on logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Header Section -->
     <header>
         <div class="container">
-            <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo" class="logo">
+            <img src="./img/logo/ac-logo-white.svg" alt="Alyssa Claerhout Logo" class="logo">
             <div>
                 <div>
                     <nav>
