--- a/pantrychef.html
+++ b/pantrychef.html
@@ -21,7 +21,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo">
+        <img src="./img/logo/ac-logo-white.svg" alt="Alyssa Claerhout Logo">
         <div>
             <div>
                 <nav>
