--- a/discoverly.html
+++ b/discoverly.html
@@ -22,7 +22,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <img src="./img/logo/alyssa-logo-nobackground.svg" alt="Alyssa Claerhout Logo" class="logo">
+        <img src="./img/logo/ac-logo-white.svg" alt="Alyssa Claerhout Logo" class="logo">
         <div>
             <div>
                 <nav>
