--- a/index.html
+++ b/index.html
@@ -54,30 +54,32 @@
                         Discoverly was created to connect people with experts from many fields
                     </p><!-- end paragraph -->
                     <picture>
-                        <source srcset="img/discoverly/sm-png/high-fid-login-mobile-small.png"
-                            media="(max-width:767px)">
+                        <source srcset="img/discoverly/sm-png/high-fid-login-mobile-small.png" media="(max-width:767px)">
                         <img src="img/discoverly/lg-png/high-fid-login-mobile-large.png" alt="Discoverly Login Page">
                     </picture>
-                    <div></div>
-                    <a href="discoverly.html" class="learnmore">Learn more </a><!-- button label -->
-                </div><!-- end second column -->
-
+                </div>
+                <a href="discoverly.html" class="learnmore">Learn more </a><!-- button label -->
+            </div><!-- end second column -->
+        </div>
+        <!-- Project 2 Section -->
+        <div id="pantrywork">
+            <div class="container">
                 <h2>Pantry Chef</h2><!-- heading for the project-->
                 <div class="row">
+                    <p><!-- open paragraph -->
+                        This app was created to save money and time for busy people wanting to make tasty, home-cooked
+                        meals.
+                    </p><!-- end paragraph -->
+                    <picture>
+                        <source srcset="img/cook-app/small-png/sm-splashpage.png" media="(max-width:767px)">
+                        <img src="img/cook-app/large-png/lg-splashpage.png" alt="Pantry Chef Splash Page">
+                    </picture>
                 </div>
-                <p><!-- open paragraph -->
-                    This app was created to save money and time for busy people wanting to make tasty, home-cooked
-                    meals.
-                </p><!-- end paragraph -->
-                <picture>
-                    <source srcset="img/cook-app/small-png/sm-splashpage.png" media="(max-width:767px)">
-                    <img src="img/cook-app/large-png/lg-splashpage.png" alt="Pantry Chef Splash Page">
-                </picture>
-                <div></div>
                 <a href="pantrychef.html" class="button">Learn more</a><!-- button label -->
-            </div><!-- end second column -->
+            </div>
+        </div><!-- end second column -->
 
-            <!-- End Project 2 Section -->
+        <!-- End Project 2 Section -->
     </main>
     <!-- Footer Section-->
     <footer id="contact">
