--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                         skills I need to build beautiful data-driven designs. I am passionate about designing a better
                         world and you'll find that accessibility and social justice are a key part of my designs.
                         <p></p>
-                        <a href="./files/claerhout-resume.pdf" download>Open My CV</a>
+                        <a href="./files/resume/claerhout-alyssa-resume.pdf" download>Open My CV</a>
                     </div>
                     <!-- Column 2 -->
                     <div>
