update prof pic

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,10 @@
         </div>
     </header>
     <main>
-
+        <picture>
+            <source srcset="img/profile-pics/alyssa-picture-small.png" media="(max-width:767px)">
+            <img src="img/profile-pics/alyssa-profile-pic-large.png" alt="Alyssa Profile Picture">
+        </picture>
     </main>
     <!-- Footer Section-->
     <footer id="contact">
