added spot for picture in contact page

--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,7 @@
     </header>
     <main>
         <picture>
-            <source srcset="img/profile-pics/alyssa-picture-small.png" media="(max-width:767px)">
-            <img src="img/profile-pics/alyssa-profile-pic-large.png" alt="Alyssa Profile Picture">
+            <!-- add picture here -->
         </picture>
     </main>
     <!-- Footer Section-->
