--- a/index.html
+++ b/index.html
@@ -47,16 +47,18 @@
         <!-- Project 1 Section -->
         <div id="discwork"> <!-- open row that holds (2) columns for project -->
             <div class="container"><!-- open first column (used for image) -->
-                <div class="row"><!-- open second column (use for text) -->
-                    <h2>Discoverly</h2><!-- heading for the project-->
-                    <p><!-- open paragraph -->
+                <div class="col-md-6"
+                    <div class="row">> <!-- open second column (use for text) -->
+                        <h2>Discoverly</h2><!-- heading for the project-->
+                        <p><!-- open paragraph -->
                         UX/UI Research and Design: Legitimate in the age of Instant Information.
                         Discoverly was created to connect people with experts from many fields
-                    </p><!-- end paragraph -->
-                    <picture>
-                        <source srcset="img/discoverly/sm-png/high-fid-login-mobile-small.png" media="(max-width:767px)">
-                        <img src="img/discoverly/lg-png/high-fid-login-mobile-large.png" alt="Discoverly Login Page">
-                    </picture>
+                        </p><!-- end paragraph -->
+                        <picture>
+                            <source srcset="img/discoverly/sm-png/high-fid-login-mobile-small.png" media="(max-width:767px)">
+                            <img src="img/discoverly/lg-png/high-fid-login-mobile-large.png" alt="Discoverly Login Page">
+                        </picture>
+                    </div>
                 </div>
                 <a href="discoverly.html" class="learnmore">Learn more </a><!-- button label -->
             </div><!-- end second column -->
