--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <main>
         <!-- Hero Section -->
         <div id="hero">
-            <h1> Hello! It's nice to meet you. I'm Alyssa Claerhout</h1>
+            <h1> Alyssa Claerhout</h1>
             <div class="container">
-                I'm a UX/UI designer on a mission to create a more intuitive and creative world.
+                <h3>UX Designer</h3>
             </div>
         </div>
 
@@ -48,7 +48,7 @@
         <div id="discwork"> <!-- open row that holds (2) columns for project -->
             <div class="container"><!-- open first column (used for image) -->
                 <div class="col-md-6">
-                    <!-- open second column (use for text) -->
+                    <div class="col-md-6"><!-- open second column (use for text) -->
                     <h2>Discoverly</h2><!-- heading for the project-->
                     <div class="row">
                         <p><!-- open paragraph -->
@@ -62,8 +62,9 @@
                                 alt="Discoverly Login Page">
                         </picture>
                     </div>
+               
+                    <a href="discoverly.html" class="learnmore">Learn more </a><!-- button label -->
                 </div>
-                <a href="discoverly.html" class="learnmore">Learn more </a><!-- button label -->
             </div><!-- end second column -->
         </div>
         <!-- Project 2 Section -->
@@ -81,8 +82,9 @@
                             <img src="img/cook-app/large-png/lg-splashpage.png" alt="Pantry Chef Splash Page">
                             </picture>
                         </div>
+                
+                    <a href="pantrychef.html" class="learnmore">Learn more</a><!-- button label -->
                 </div>
-                <a href="pantrychef.html" class="button">Learn more</a><!-- button label -->
             </div>
         </div><!-- end second column -->
 
