Updated columns and fixed a few problems

--- a/about.html
+++ b/about.html
@@ -36,16 +36,17 @@
         </div>
     </header>
     <main>
-        <div>
+        <div class="container">
             <div>
-                <h1>About</h1>
-                <picture>
-                    <source srcset="img/profile-pics/alyssa-picture-small.png" media="(max-width:767px)">
-                    <img src="img/profile-pics/alyssa-profile-pic-large.png" alt="Alyssa Profile Picture">
-                </picture>
-                <div>
-                    <!-- Column 1 -->
-                    <div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h1>About</h1>
+                        <picture>
+                            <source srcset="img/profile-pics/alyssa-picture-small.png" media="(max-width:767px)">
+                            <img src="img/profile-pics/alyssa-profile-pic-large.png" alt="Alyssa Profile Picture">
+                        </picture>
+                    </div>
+                    <div class="col-md-6">
                         <h2>My Story</h2>
                         <p></p>
                         I'm a sociologist turned UX/UI designer located in the mountains of the American Southwest. My
@@ -55,26 +56,31 @@
                         <p></p>
                         <a href="./files/resume/claerhout-alyssa-resume.pdf" download>Open My CV</a>
                     </div>
-                    <!-- Column 2 -->
-                    <div>
-                    </div>
-                    <h2>Skills & Tools</h2>
-                    <h3>Relevant Skills</h3>
-                    <ul>
-                        <li>Communication</li>
-                        <li>Teamwork</li>
-                        <li>Problem Solving</li>
-                        <li>Data Analysis</li>
-                        <li>User Testing</li>
-                    </ul>
-                    <h3>Tools I Use</h3>
-                    <ul>
-                        <li>Figma</li>
-                        <li>Miro</li>
-                        <li>Sketch</li>
-                        <li>Adobe CC</li>
-                    </ul>
                 </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2>Skills & Tools</h2>
+                        <h3>Relevant Skills</h3>
+                        <ul>
+                            <li>Communication</li>
+                            <li>Teamwork</li>
+                            <li>Problem Solving</li>
+                            <li>Data Analysis</li>
+                            <li>User Testing</li>
+                        </ul>
+                    </div>
+                
+                    <div class="col-md-6">
+                        <h3>Tools I Use</h3>
+                        <ul>
+                            <li>Figma</li>
+                            <li>Miro</li>
+                            <li>Sketch</li>
+                            <li>Adobe CC</li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </div>
     </main>
