--- a/discoverly.html
+++ b/discoverly.html
@@ -39,30 +39,26 @@
         <div class="container">
             <div>
                 <h1>Discoverly</h1>
-                <div class="container">
-                    <picture>
-                        <source srcset="img/discoverly/sm-png/high-fid-home-mobile-small.png" media="(max-width:767px)">
-                        <img src="img/discoverly/lg-png/high-fid-mobile-home-large.png"
-                            alt="Discoverly Home Page Picture">
-                    </picture>
-                    <p>
-                        The Discoverly app was created as a means for people to easily connect with accurate, reliable
-                        information. The primary concern for the design of this app was making an easy and intuitive
-                        scheduling system and video chat for an all-in-one experience for the user.
+                <picture>
+                    <source srcset="img/discoverly/sm-png/high-fid-home-mobile-small.png" media="(max-width:767px)">
+                    <img src="img/discoverly/lg-png/high-fid-mobile-home-large.png" alt="Discoverly Home Page Picture">
+                </picture>
+                <p>
+                    The Discoverly app was created as a means for people to easily connect with accurate, reliable
+                    information. The primary concern for the design of this app was making an easy and intuitive
+                    scheduling system and video chat for an all-in-one experience for the user.
+                </p>
+
+                <div>
+                    <h2>Problem</h2>
+                    <p>"Why is finding reliable information so challenging?" "Most of what I find online...I take
+                        with a grain of salt."
+                        The goal was to bridge the gap between young professionals and industry experienced experts.
+                        There's often a disconnect between what is posted online and accurate information, as well
+                        as the physical barrier that is created when humans interact online.
+                        Discoverly provides a means of connection between humans and accurate information.
                     </p>
-
-                    <div>
-                        <h2>Problem</h2>
-                        <p>"Why is finding reliable information so challenging?" "Most of what I find online...I take
-                            with a grain of salt."
-                            The goal was to bridge the gap between young professionals and industry experienced experts.
-                            There's often a disconnect between what is posted online and accurate information, as well
-                            as the physical barrier that is created when humans interact online.
-                            Discoverly provides a means of connection between humans and accurate information.
-                        </p>
-                    </div>
                 </div>
-
                 <div>
                     <h2>Understand</h2>
                     <picture>
