--- a/index.html
+++ b/index.html
@@ -36,25 +36,18 @@
         </div>
     </header>
     <main>
-        <!-- Hero Section -->
-        <div id="hero">
-            <h1> Alyssa Claerhout</h1>
-            <div class="container">
-                <h3>UX Designer</h3>
+        <div class="container">
+            <!-- Hero Section -->
+            <div id="hero">
+                <h1> Alyssa Claerhout<br><span>UX Designer</span></h1>
             </div>
-        </div>
 
-        <!-- Project 1 Section -->
-        <div id="discwork"> <!-- open row that holds (2) columns for project -->
-            <div class="container"><!-- open first column (used for image) -->
-                <div class="col-md-6">
-                    <div class="col-md-6"><!-- open second column (use for text) -->
-                    <h2>Discoverly</h2><!-- heading for the project-->
-                    <div class="row">
-                        <p><!-- open paragraph -->
-                            UX/UI Research and Design: Legitimate in the age of Instant Information.
-                            Discoverly was created to connect people with experts from many fields
-                        </p><!-- end paragraph -->
+            <!-- Project 1 Section -->
+            <h2>Work</h2>
+            <div id="discwork">
+                <div class="row">
+                    <div class="column col-md-6 col-lg-7">
+                        <h3>Discoverly</h3><!-- heading for the project-->
                         <picture>
                             <source srcset="img/discoverly/sm-png/high-fid-login-mobile-small.png"
                                 media="(max-width:767px)">
@@ -62,33 +55,37 @@
                                 alt="Discoverly Login Page">
                         </picture>
                     </div>
-               
-                    <a href="discoverly.html" class="learnmore">Learn more </a><!-- button label -->
-                </div>
-            </div><!-- end second column -->
-        </div>
-        <!-- Project 2 Section -->
-        <div id="pantrywork">
-            <div class="container">
-                <div class="col-md-6">
-                    <h2>Pantry Chef</h2><!-- heading for the project-->
-                        <div class="row">
-                            <p><!-- open paragraph -->
-                            This app was created to save money and time for busy people wanting to make tasty, home-cooked
-                            meals.
-                            </p><!-- end paragraph -->
-                            <picture>
-                            <source srcset="img/cook-app/small-png/sm-splashpage.png" media="(max-width:767px)">
-                            <img src="img/cook-app/large-png/lg-splashpage.png" alt="Pantry Chef Splash Page">
-                            </picture>
-                        </div>
-                
-                    <a href="pantrychef.html" class="learnmore">Learn more</a><!-- button label -->
+                    <div class="column col-md-6 col-lg-5">
+                        <p><!-- open paragraph -->
+                            UX/UI Research and Design: Legitimate in the age of Instant Information.
+                            Discoverly was created to connect people with experts from many fields
+                        </p><!-- end paragraph -->
+                        <a href="discoverly.html" class="button">Learn more </a><!-- button label -->
+                    </div>
                 </div>
             </div>
-        </div><!-- end second column -->
 
-        <!-- End Project 2 Section -->
+            <!-- Project 2 Section -->
+            <div id="pantrywork">
+                <div class="row">
+                    <div class="column col-md-6 col-lg-7">
+                        <h3>Pantry Chef</h3><!-- heading for the project-->
+                        <picture>
+                            <source srcset="img/cook-app/small-png/sm-splashpage.png" media="(max-width:767px)">
+                            <img src="img/cook-app/large-png/lg-splashpage.png" alt="Pantry Chef Splash Page">
+                        </picture>
+                    </div>
+                    <div class="column col-md-6 col-lg-5">
+                        <p><!-- open paragraph -->
+                            This app was created to save money and time for busy people wanting to make tasty,
+                            home-cooked
+                            meals.
+                        </p><!-- end paragraph -->
+                        <a href="pantrychef.html" class="button">Learn more</a><!-- button label -->
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- Footer Section-->
     <footer id="contact">
