changed duplicate id

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <!-- Project 3 Section -->
-            <div id="pantrywork">
+            <div id="thirdproject">
                 <div class="row">
                     <div class="column col-md-6 col-lg-7">
                         <h3>Pantry Chef</h3><!-- heading for the project-->
