added js script to all pages

--- a/about.html
+++ b/about.html
@@ -119,6 +119,6 @@
             <p>Copyright Alyssa-Claerhout 2023</p>
         </div>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
-
 </html>
