--- a/discoverly.html
+++ b/discoverly.html
@@ -260,6 +260,6 @@
         <a href="contact.html">Contact</a>
         <a href="about.html#skills">My Skills</a>
     </footer>
+    <script src="js/scripts.js"></script>
 </body>
-
 </html>
