--- a/about.html
+++ b/about.html
@@ -119,6 +119,7 @@
             <p>Copyright Alyssa-Claerhout 2023</p>
         </div>
     </footer>
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
