--- a/pantrychef.html
+++ b/pantrychef.html
@@ -72,6 +72,7 @@
         <a href="contact.html">Contact</a>
         <a href="about.html#skills">My Skills</a>
     </footer>
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
