--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
     <link href="./img/favicon_io/unicorn-favicon/favicon-16x16.png" rel="shortcut icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
@@ -69,7 +70,7 @@
                             <li>User Testing</li>
                         </ul>
                     </div>
-                
+
                     <div class="col-md-6">
                         <h3>Tools I Use</h3>
                         <ul>
@@ -122,4 +123,5 @@
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
