--- a/index.html
+++ b/index.html
@@ -22,19 +22,20 @@
     <!-- Header Section -->
     <header>
         <div class="container">
-            <div class="navtoggle" id="myNavtoggle"></div>
-            <img src="./img/logo/ac-logo-white.svg" alt="Alyssa Claerhout Logo" class="logo">
-            <div>
+            <div class="navtoggle" id="myNavtoggle">
+                <img src="./img/logo/ac-logo-white.svg" alt="Alyssa Claerhout Logo" class="logo">
                 <div>
-                    <nav>
-                        <ul class="navigation">
-                            <li><a href="index.html">Work</a></li>
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="contact.html">Contact</a></li>
-                            <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i
-                                        class="fas fa-bars"></i></a></li>
-                        </ul>
-                    </nav>
+                    <div>
+                        <nav>
+                            <ul class="navigation">
+                                <li><a href="index.html">Work</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i
+                                            class="fas fa-bars"></i></a></li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
             </div>
         </div>
