--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 
 <body id="contact-body">
     <!-- Header Section -->
-    <header>
+    <header id="contact-header">
         <img src="./img/logo/ac-logo-white.svg" alt="Alyssa Claerhout Logo" class="logo">
         <div>
             <div>
