contact main padding

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             </div>
         </div>
     </header>
-    <main>
+    <main id="contact-main">
         <div class="container">
             <picture>
                 <!-- add picture here -->
@@ -43,7 +43,7 @@
         </div>
     </main>
     <!-- Footer Section-->
-    <footer id="contact">
+    <footer id="contact-footer">
         <div class="container">
             <div>
                 <h2>Get in Touch</h2>
