--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         </div>
     </main>
     <!-- Footer Section-->
-    <footer id="contact-footer">
+    <footer id="contact">
         <div class="container">
             <div>
                 <h2>Get in Touch</h2>
